--- a/Java-Eclipse/.classpath
+++ b/Java-Eclipse/.classpath
@@ -6,5 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="Java-Easy"/>
+	<classpathentry kind="src" path="Java-Rule"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
